--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 SHGeofence/SHGeofence.xcodeproj/project.xcworkspace/xcuserdata
 SHGeofence/SHGeofence.xcodeproj/xcuserdata
+SHGeofence.xcodeproj/project.xcworkspace/xcuserdata
+SHGeofence.xcodeproj/xcuserdata
