--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ SHGeofence/SHGeofence.xcodeproj/project.xcworkspace/xcuserdata
 SHGeofence/SHGeofence.xcodeproj/xcuserdata
 SHGeofence.xcodeproj/project.xcworkspace/xcuserdata
 SHGeofence.xcodeproj/xcuserdata
+Pods
+SHGeofence.xcworkspace/xcuserdata
